# Mimir

./: .audit_findings.json  .backtest_filters.md  .backtest_final.md  .backtest_results.txt  .backtest_sweep.md  .dockerignore  .env.example  .fix2_manifest.json  .gitignore  .strategy_verdict.md  .verify_manifest.json  ANIMATION_ENHANCEMENTS.md  AUDIT_TRACKER.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LIVE_TICK_VERIFICATION.md  Makefile  QUICK_REFERENCE_LIVE_UPDATES.md  README.md  SECURITY.md  TESTING_GUIDE.md  TEST_RUNBOOK.md  bot.bat  create-custom-watchlist.mjs  curl_out.txt  docker-compose.yml  fix_kronos.py  fix_main.py  fix_ts.js  generate_tracker.mjs  mimir-confluence-engine.md  mimir-unified-strategy.md  neomotron_report.md  package-lock.json  package.json  patch.js  patchLtp.js  (+12 more)
.agents/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.sweep_out/: h3_r1.5.txt  h3_r2.txt  h3_r3.txt  h8_r1.5.txt
.sweep_tmp/: hb12_r1.5.txt  hb12_r2.txt  hb12_r3.txt  hb8_r2.txt  hb8_r3.txt
Dynamic Island/: tailwind.config.ts
backend/: ASSUMPTIONS.md  Dockerfile  alter-table.cjs  build.mjs  check_config.cjs  check_db.ts  check_paper_db.ts  check_paper_state.cjs  check_pg.js  check_pg2.cjs  clear_db.ts  create-tables.cjs  eslint-out.json  eslint.config.mjs  eslint_backend.json  fix_config.ts  fix_imports.py  fix_paper_schema.cjs  load-env.cjs  package-lock.json  package.json  query.cjs  (+16 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+406 files in other folders)
